--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es6"
-  }
+    "target": "es6",
+    "jsx": "react",
+    "moduleResolution": "node"
+  },
 }
