--- a/package.json
+++ b/package.json
@@ -5,27 +5,41 @@
   "main": "code.js",
   "scripts": {
     "build": "npx webpack --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src --ext '.js,.ts,.tsx' --quiet"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "colorjs.io": "0.0.3",
     "css-loader": "^3.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-lodash": "^7.2.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^0.23.1",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.2.4",
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
     "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "eslint-plugin-jsx-a11y": "^6.4.1"
   }
 }
