--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^2.0.0",
     "react": "^16.13.1",
+    "react-color": "^2.19.3",
     "react-dom": "^16.13.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^8.2.0",
