[package] move supposed dev dependencies to devdependencies [package] uninstall unused and bloat packages [eslint] reinstall everything from scratch. extend google rules [typesript] reinstall from scratch + new config

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "sandbox",
+  "name": "material-palette",
   "version": "1.0.0",
   "description": "",
-  "main": "code.js",
+  "main": "code.ts",
+  "type": "module",
   "scripts": {
     "build": "npx webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint ./src",
     "lint": "eslint ./src --ext '.js,.ts,.tsx' --quiet"
   },
   "author": "",
@@ -13,35 +15,30 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
-    "colorjs.io": "0.0.3",
-    "css-loader": "^3.1.0",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-lodash": "^7.2.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "loader-utils": "^2.0.0",
-    "react": "^16.13.1",
+    "colorjs.io": "0.0.5",
+    "react": "^18.0.0",
     "react-color": "^2.19.3",
-    "react-dom": "^16.13.1",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^8.2.0",
-    "typescript": "^4.2.4",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "eslint-plugin-jsx-a11y": "^6.4.1"
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.13.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
+    "html-webpack-inline-source-plugin": "^0.0.10",
+    "html-webpack-plugin": "^5.5.0",
+    "loader-utils": "^3.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
