--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@figma/plugin-typings": "^1.44.0",
     "@types/react": "^18.0.5",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
@@ -34,7 +36,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
-    "html-webpack-inline-source-plugin": "^0.0.10",
+    "html-inline-script-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "loader-utils": "^3.2.0",
     "style-loader": "^3.3.1",
