--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "include": ["declarations.d.ts"],
+  "include": ["declarations.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "react",
     "target": "es2016" /* Modules */,
