--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.3",
-    "@mui/styles": "^5.6.2",
-    "classnames": "^2.3.1",
+    "@mui/material": "^5.7.0",
+    "@mui/styles": "^5.7.0",
     "colorjs.io": "0.0.5",
+    "jotai": "^1.6.6",
     "react": "^18.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.44.0",
-    "@types/react": "^18.0.8",
+    "@figma/plugin-typings": "^1.47.0",
+    "@types/react": "^18.0.9",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "css-loader": "^6.7.1",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
@@ -41,9 +41,9 @@
     "loader-utils": "^3.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.9",
-    "typescript": "^4.6.3",
+    "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.72.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
 }
