--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "code.ts",
   "type": "module",
   "scripts": {
-    "build": "npx webpack --mode=production",
-    "dev": "npx webpack --mode=development --watch",
+    "build": "rspack build --mode=production",
+    "dev": "rspack serve --mode=development --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint ./src",
     "lint": "eslint ./src --ext '.js,.ts,.tsx' --quiet"
@@ -15,36 +15,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.6",
-    "@mui/styles": "^5.8.6",
-    "jotai": "^1.7.3",
-    "react": "^18.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@mui/styles": "^6.4.7",
+    "jotai": "^2.12.1",
+    "react": "^19.0.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.49.0",
-    "@types/react": "^18.0.14",
-    "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@rspack/cli": "^1.2.7",
+    "@rspack/core": "^1.2.7",
+    "@types/react": "^19.0.10",
+    "@types/react-color": "^3.0.13",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "css-loader": "^6.7.1",
-    "eslint": "^8.19.0",
+    "eslint": "^9.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.37.4",
     "html-inline-script-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "loader-utils": "^3.2.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.2",
+    "url-loader": "^4.1.1"
   }
 }
