--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "rspack build --mode=production",
-    "dev": "rspack serve --mode=development --watch",
+    "dev": "rspack build --mode=development --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint ./src",
     "lint": "eslint ./src --ext '.js,.ts,.tsx' --quiet"
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.37.4",
     "html-inline-script-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.6.3",
     "loader-utils": "^3.2.0",
     "style-loader": "^3.3.1",
     "typescript": "^5.8.2",
