chore(package): installs prettier

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^6.4.7",
     "@mui/styles": "^6.4.7",
     "jotai": "^2.12.1",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0"
