--- a/package.json
+++ b/package.json
@@ -17,24 +17,26 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
-    "@mui/styles": "^6.4.7",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@mui/material-pigment-css": "^7.0.2",
+    "@mui/styles": "6.4.8",
+    "@pigment-css/react": "^0.0.30",
     "jotai": "^2.12.1",
     "prettier": "^3.5.3",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.49.0",
-    "@rspack/cli": "^1.2.7",
-    "@rspack/core": "^1.2.7",
-    "@types/react": "^19.0.10",
+    "@figma/plugin-typings": "^1.109.0",
+    "@rspack/cli": "^1.3.5",
+    "@rspack/core": "^1.3.5",
+    "@types/react": "^19.1.2",
     "@types/react-color": "^3.0.13",
-    "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.12.2",
-    "@typescript-eslint/parser": "^8.12.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "css-loader": "^6.7.1",
     "eslint": "^9.22.0",
     "eslint-config-google": "^0.14.0",
@@ -44,7 +46,7 @@
     "html-webpack-plugin": "^5.6.3",
     "loader-utils": "^3.2.0",
     "style-loader": "^3.3.1",
-    "typescript": "^5.8.2",
+    "typescript": "^5.8.3",
     "url-loader": "^4.1.1"
   }
 }
