--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["declarations.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"],
+  "typeRoots": ["./src/globals.d.ts"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "target": "es2016" /* Modules */,
