--- a/package.json
+++ b/package.json
@@ -28,19 +28,26 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
+    "@babel/plugin-syntax-typescript": "^7.25.9",
     "@figma/plugin-typings": "^1.109.0",
     "@rspack/cli": "^1.3.5",
     "@rspack/core": "^1.3.5",
+    "@types/babel__core": "^7",
     "@types/react": "^19.1.2",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "css-loader": "^6.7.1",
     "eslint": "^9.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "6.0.0-rc.1",
     "html-inline-script-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.6.3",
     "loader-utils": "^3.2.0",
